//
// {C} Copyright 2020 Pensando Systems Inc. All rights reserved
//
//------------------------------------------------------------------------------
///
/// \file
/// protobuf specification for event information
///
//------------------------------------------------------------------------------

syntax = "proto3";
package operd;

// Endpoint info for learning
message EpLearnPkt {
  // host interface on which packet was received
  bytes HostIf = 1;
  // packet as received upto a maximum size of 128 bytes
  bytes Packet = 2;
}
